--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/assets/logo.png"/>
     <link rel="stylesheet" href="/css/tablet.css" media="(min-width: 426px)"/>
     <link rel="stylesheet" href="/css/desktop.css" media="(min-width: 769px)"/>
-    <title>Venta de mercado</title>
+    <title>Karen Bolaños</title>
 </head>
 <body>
     <header class="nav-container">
@@ -51,7 +51,7 @@
         <section class="hero">
             <div class="hero-title">
                 <div>
-                    <h1>Venta de mercado</h1>
+                    <h1>Karen Bolaños</h1>
                 </div>
             </div>
 
@@ -114,13 +114,13 @@
         <section id="aboutus" class="about-us">
             <div class="about-us-text">
                 <h2>Sobre nosotros</h2>
-                <p>El Vendedor Informal se dedica a ofrecer una variedad de productos frescos y esenciales, brindando a nuestros clientes una opción conveniente y accesible directamente desde el mercado. Desde nuestros inicios, hemos trabajado para proporcionar una alternativa que combine calidad y flexibilidad, adaptándonos a las necesidades diarias de nuestros compradores.</p>
+                <p>Karen Bolaños es una marca que representa elegancia y estilo, dedicada a la creación de prendas y accesorios que destacan por su diseño y calidad. Desde sus inicios, la marca ha trabajado con esmero para ofrecer productos que reflejan la personalidad y el gusto de cada cliente, combinando tendencias contemporáneas con un toque de sofisticación.</p>
 
-                <p>En El Vendedor Informal, nos enorgullece ofrecer productos como frutas, verduras y otros artículos básicos, seleccionados cuidadosamente para asegurar frescura y buen sabor. Nuestro enfoque es proporcionar un servicio personalizado y cercano, permitiendo a nuestros clientes disfrutar de una experiencia de compra que sea tanto eficiente como amigable.</p>
+                <p>En Karen Bolaños, cada pieza es cuidadosamente elaborada, utilizando materiales de alta calidad y técnicas de confección que aseguran un acabado impecable. Nos enorgullece crear artículos que no solo son estéticamente atractivos, sino también cómodos y funcionales, adaptados a las necesidades de la mujer moderna.</p>
 
-                <p>Nos dedicamos a servir a nuestra comunidad con un compromiso hacia la calidad y la satisfacción del cliente. Cada producto que ofrecemos está pensado para cumplir con los estándares más altos, mientras mantenemos un trato directo y accesible.</p>
+                <p>Nuestro compromiso es brindar a nuestros clientes una experiencia de compra única, donde cada producto es un reflejo de la pasión y el detalle que ponemos en nuestro trabajo. En Karen Bolaños, entendemos que la moda es una forma de expresión, y nos esforzamos por ofrecer piezas que permitan a nuestras clientas mostrar su verdadera esencia.</p>
 
-                <p>El Vendedor Informal: Tu opción para productos frescos y de calidad, con el servicio personalizado que buscas. Ven y descubre cómo podemos hacer que tus compras sean más fáciles y satisfactorias, ofreciendo lo mejor del mercado a tu alcance.</p>
+                <p>Karen Bolaños: Una marca dedicada a la elegancia y el estilo, donde cada prenda y accesorio es una obra de arte pensada para realzar la belleza y la confianza de quienes los llevan. Descubre la diferencia que un diseño cuidadosamente elaborado puede hacer en tu guardarropa.</p>
             </div>
             <div class="about-us-img">
                 <img src="./assets/img.jpg" alt="">
