--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
         <section id="aboutus" class="about-us">
             <div class="about-us-text">
                 <h2>Sobre nosotros</h2>
-                <p>Karen Bolaños es una marca que representa elegancia y estilo, dedicada a la creación de prendas y accesorios que destacan por su diseño y calidad. Desde sus inicios, la marca ha trabajado con esmero para ofrecer productos que reflejan la personalidad y el gusto de cada cliente, combinando tendencias contemporáneas con un toque de sofisticación.</p>
+                <p>Gisela Nails,  es una marca que representa elegancia y estilo, se destaca por su diseño y calidad. Desde sus inicios, la marca ha trabajado con esmero para ofrecer servicios que reflejan la personalidad y el gusto de cada cliente, combinando tendencias contemporáneas con un toque de sofisticación.</p>
 
-                <p>En Karen Bolaños, cada pieza es cuidadosamente elaborada, utilizando materiales de alta calidad y técnicas de confección que aseguran un acabado impecable. Nos enorgullece crear artículos que no solo son estéticamente atractivos, sino también cómodos y funcionales, adaptados a las necesidades de la mujer moderna.</p>
+                <p>Gisela Nails, cada diseño es cuidadosamente elaborado, utilizando materiales de alta calidad y técnicas que aseguran un acabado impecable.</p>
 
-                <p>Nuestro compromiso es brindar a nuestros clientes una experiencia de compra única, donde cada producto es un reflejo de la pasión y el detalle que ponemos en nuestro trabajo. En Karen Bolaños, entendemos que la moda es una forma de expresión, y nos esforzamos por ofrecer piezas que permitan a nuestras clientas mostrar su verdadera esencia.</p>
+                <p>Nuestro compromiso es brindar a nuestros clientes una experiencia única, donde cada servicio es un reflejo de la pasión y el detalle que ponemos en nuestro trabajo. En Gisela Nails, entendemos que la estetica  es una forma de expresión, y nos esforzamos por ofrecer a nuestras clientas mostrar su verdadera esencia.</p>
 
-                <p>Karen Bolaños: Una marca dedicada a la elegancia y el estilo, donde cada prenda y accesorio es una obra de arte pensada para realzar la belleza y la confianza de quienes los llevan. Descubre la diferencia que un diseño cuidadosamente elaborado puede hacer en tu guardarropa.</p>
+                <p>Gisela Nails Una marca dedicada a la elegancia y el estilo, para realzar la belleza y la confianza de quienes nos visitan. Descubre la diferencia de un diseño finamente elaborado en tus uñas para que te sientas realmente hermosa.</p>
             </div>
             <div class="about-us-img">
                 <img src="./assets/img.jpg" alt="">
