Initial commit from script

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/assets/logo.png"/>
     <link rel="stylesheet" href="/css/tablet.css" media="(min-width: 426px)"/>
     <link rel="stylesheet" href="/css/desktop.css" media="(min-width: 769px)"/>
-    <title>Karen Bolaños</title>
+    <title>Gisela Nails</title>
 </head>
 <body>
     <header class="nav-container">
@@ -51,7 +51,7 @@
         <section class="hero">
             <div class="hero-title">
                 <div>
-                    <h1>Karen Bolaños</h1>
+                    <h1>Gisela Nails</h1>
                 </div>
             </div>
 
